--- a/.config
+++ b/.config
@@ -141,3 +141,4 @@ CONFIG_PACKAGE_v2ray-plugin=y
 CONFIG_PARTED_READLINE=y
 CONFIG_TARGET_KERNEL_PARTSIZE=256
 CONFIG_TARGET_ROOTFS_PARTSIZE=512
+CONFIG_VMDK_IMAGES=y
