--- a/.config
+++ b/.config
@@ -64,6 +64,7 @@ CONFIG_PACKAGE_luci-app-wol=y
 # Themes
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-theme-opentomcat=y
 
 
 # Software
